--- a/core/utils/generate.html
+++ b/core/utils/generate.html
@@ -1,21 +1,21 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-
+  
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <title>BRC GitHub atlas</title>
+    <title>Generate data from biological records CSV</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
 
   <body>
     
     <div class="col-lg-8 mx-auto p-4 py-md-5">
-      <header id="atlas-site-name" class="d-flex align-items-center pb-3 mb-5 border-bottom fs-2"></header>
+      <header class="d-flex align-items-center pb-3 mb-5 border-bottom fs-2">Generate atlas data from biological records CSV</header>
 
       <main>
-        
+        <input type="file" accept=".csv" onChange="">
       </main>
       <footer class="pt-5 my-5 text-body-secondary border-top">
         Atlas website generated using BRC configurable atlas probject
