--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
       <main>
         
+        <header class="fs-4">Utilities</header>
+        <a href="core/utils/generate.html">Generate data</a>
       </main>
       <footer class="pt-5 my-5 text-body-secondary border-top">
         Atlas website generated using BRC configurable atlas probject
