--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <title>BRC GitHub atlas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/biologicalrecordscentre/brc-atlas@latest/dist/brcatlas.umd.css">
   </head>
 
   <body>
@@ -15,6 +16,18 @@
       <header id="atlas-site-name" class="d-flex align-items-center pb-3 mb-5 border-bottom fs-2"></header>
 
       <main>
+        <div class="row flex-column-reverse flex-sm-row">
+          <div class="col-sm-4">
+            <div class="dropdown">
+              <select id="atlas-taxa-select" class="form-select" onchange="atlasTaxonSelected()">
+                <option value="" disabled selected>Select taxon</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <div id="atlas-static-map">
+          </div>
+        </div>
         
         <header class="fs-4">Utilities</header>
         <a href="core/utils/generate.html">Generate data</a>
@@ -25,7 +38,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="https://cdn.jsdelivr.net/gh/biologicalrecordscentre/brc-atlas@latest/dist/brcatlas.umd.js"></script>
     <script src="./core/js/test.js"></script>
-
   </body>
 </html>
