--- a/core/utils/generate.html
+++ b/core/utils/generate.html
@@ -18,15 +18,14 @@
         <input type="file" accept=".csv" onChange="biologicalRecordsCsvOpened(event)">
         <div id="biologicalRecordsCsvLoad" class="spinner-border invisible"></div>
       </main>
-      <footer class="pt-5 my-5 text-body-secondary border-top">
-        Atlas website generated using BRC configurable atlas probject
-      </footer>
+      <footer id="brc-atlas-footer"></footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://unpkg.com/brc-atlas-bigr/dist/bigr.min.umd.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="../js/components.js"></script>
     <script src="../js/utils.js"></script>
   </body>
 </html>
