--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
         <header class="fs-4">Utilities</header>
         <a href="core/utils/generate.html">Generate data</a>
       </main>
-      <footer class="pt-5 my-5 text-body-secondary border-top">
-        Atlas website generated using BRC configurable atlas probject
-      </footer>
+      <footer id="brc-atlas-footer"></footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/gh/biologicalrecordscentre/brc-atlas@latest/dist/brcatlas.umd.js"></script>
+    <script src="./core/js/components.js"></script>
     <script src="./core/js/test.js"></script>
   </body>
 </html>
