Reorganisation of core files

--- a/core/generate.html
+++ b/core/generate.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://unpkg.com/brc-atlas-bigr/dist/bigr.min.umd.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="../js/components.js"></script>
-    <script src="../js/utils.js"></script>
+    <script src="js/components.js"></script>
+    <script src="js/utils.js"></script>
   </body>
 </html>
