--- a/core/generate.html
+++ b/core/generate.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>Generate data from biological records CSV</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -26,7 +26,7 @@
       </p>
       <main>
         <div class="mb-5">
-          <input type="file" accept=".csv" onChange="biologicalRecordsCsvOpened(event)">
+          <input id="brc-atlas-csv-load" type="file" accept=".csv">
           <div id="biologicalRecordsCsvLoad" class="spinner-border invisible"></div>
         </div>
         <h4 class="mt-4">Navigation links</h4>
@@ -37,14 +37,7 @@
       </main>
       <footer id="brc-atlas-footer"></footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
-    <script src="https://unpkg.com/brc-atlas-bigr/dist/bigr.min.umd.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="js/general.js"></script>
-    <script src="js/components.js"></script>
-    <script src="js/utils.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script  data-main="js/atlas-generate" src="js/require.js"></script>
   </body>
 </html>
