Added optional tabs display for content - configurable Refactored atlas-main.js as module

--- a/core/generate.html
+++ b/core/generate.html
@@ -13,7 +13,7 @@
     
     <div class="col-lg-8 mx-auto p-4 py-md-5">
       
-      <header id="brc-atlas-header"></header>
+      <header id="brc-local-atlas-header"></header>
       <h4>Generate data from biological records CSV</h4>
       <p>
         Use this utility to select a CSV file of biological records from your computer
@@ -26,7 +26,7 @@
       </p>
       <main>
         <div class="mb-5">
-          <input id="brc-atlas-csv-load" type="file" accept=".csv">
+          <input id="brc-local-atlas-csv-load" type="file" accept=".csv">
           <div id="biologicalRecordsCsvLoad" class="spinner-border invisible"></div>
         </div>
         <h4 class="mt-4">Navigation links</h4>
@@ -35,7 +35,7 @@
           <a class="list-group-item list-group-item-action"href="main.html">Back to main atlas page</a>
         </ul>
       </main>
-      <footer id="brc-atlas-footer"></footer>
+      <footer id="brc-local-atlas-footer"></footer>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script  data-main="js/atlas-generate" src="js/require.js"></script>
