--- a/core/admin.html
+++ b/core/admin.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="col-lg-8 mx-auto p-4 py-md-5">
-      <header id="brc-atlas-header"></header>
+      <header id="brc-local-atlas-header"></header>
       
       <main>
         <h4>Atlas admin utilties</h4>
@@ -23,7 +23,7 @@
           <a class="list-group-item list-group-item-action" href="main.html">Back to main atlas page</a>
         </ul>
       </main>
-      <footer id="brc-atlas-footer"></footer>
+      <footer id="brc-local-atlas-footer"></footer>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script  data-main="js/atlas-admin" src="js/require.js"></script>
