--- a/core/generate.html
+++ b/core/generate.html
@@ -20,18 +20,25 @@
         from which to generate all the data files that will drive your atlas site.
         The file you select is not uploaded - it is only used to generate the atlas
         data files which are zipped and saved to a folder on your computer. To drive
-        your atlas site, you will unzip this file and upload the atlas data 
-        to your forked GitHub repo.
+        your atlas site, you can unzip the files generated and upload the appropariate
+        locations in the data folder of your forked GitHub repo.
         Your original biological records CSV is not uploaded to the atlas site.
       </p>
       <main>
         <div class="mb-5">
-          <input id="brc-local-atlas-csv-load" type="file" accept=".csv">
+          <input id="brc-local-atlas-csv-load" class="btn btn-secondary" type="file" accept=".csv">
           <div id="biologicalRecordsCsvLoad" class="spinner-border invisible"></div>
+          <br/>
+          <button id="brc-local-atlas-gen-map" type="button" class="btn btn-secondary">Generate atlas map data</button>
+          <br/>
+          <button id="brc-local-atlas-gen-chart" type="button" class="btn btn-light">Generate chart map data</button>
+        
         </div>
         <h4 class="mt-4">Navigation links</h4>
-        <ul class="list-group" style="display: inline-block">
+        <ul class="list-group admin-link">
           <a class="list-group-item list-group-item-action" href="admin.html">Back to admin utils page</a>
+        </ul>
+        <ul class="list-group admin-link">
           <a class="list-group-item list-group-item-action"href="main.html">Back to main atlas page</a>
         </ul>
       </main>
