--- a/core/admin.html
+++ b/core/admin.html
@@ -15,11 +15,14 @@
       
       <main>
         <h4>Atlas admin utilties</h4>
-        <ul class="list-group" style="display: inline-block">
-          <a class="list-group-item list-group-item-action" href="generate.html">Generate site atlas data from CSV biological records</a>
+        <ul class="list-group admin-link">
+          <a class="list-group-item list-group-item-action" href="generate.html">Generate atlas <b>data</b> from CSV biological records</a>
         </ul>
+        <!-- <ul class="list-group admin-link">
+          <a class="list-group-item list-group-item-action" href="generate.html">Generate atlas <b>chart data</b> from CSV biological records</a>
+        </ul> -->
         <h4 class="mt-4">Navigation links</h4>
-        <ul class="list-group" style="display: inline-block">
+        <ul class="list-group admin-link">
           <a class="list-group-item list-group-item-action" href="main.html">Back to main atlas page</a>
         </ul>
       </main>
