--- a/core/main.html
+++ b/core/main.html
@@ -12,7 +12,7 @@
   <body>
     
     <div class="col-lg-8 mx-auto p-4 py-md-5">
-      <header id="brc-local-atlas-header"></header>
+      <header id="brc-header"></header>
       <main>
         <div class="row flex-column-reverse flex-sm-row">
           <div class="col-sm-4">
@@ -21,15 +21,15 @@
                 <option value="" disabled selected>Select taxon</option>
               </select>
             </div>
-            <div id="brc-local-atlas-controls"></div>
+            <div id="brc-controls"></div>
           </div>
           <div class="col-sm-8">
             <!-- <div id="atlas-static-map"> -->
-            <div id="brc-local-atlas-tabs"></div>
+            <div id="brc-tabs"></div>
           </div>
         </div>
       </main>
-      <footer id="brc-local-atlas-footer"></footer>
+      <footer id="brc-footer"></footer>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script  data-main="js/atlas-main" src="js/require.js"></script>
