--- a/core/userpage.html
+++ b/core/userpage.html
@@ -12,9 +12,9 @@
   <body>
     
     <div class="col-lg-8 mx-auto p-4 py-md-5">
-      <header id="brc-local-atlas-header"></header>
+      <header id="brc-header"></header>
       <main></main>
-      <footer id="brc-local-atlas-footer"></footer>
+      <footer id="brc-footer"></footer>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script  data-main="js/atlas-userpage" src="js/require.js"></script>
