--- a/core/generate.html
+++ b/core/generate.html
@@ -32,11 +32,15 @@
               <div id="biologicalRecordsCsvLoad" class="spinner-border invisible"></div>
             </div>
           </div>
-        
+
+          <div class="brc-file-enable">
+            <button id="brc-gen-sp" type="button" class="btn btn-primary brc-util">Generate species list</button>
+          </div>
+
           <div id="brc-map-gen-grp" class="border brc-ctrl-grp brc-file-enable">
             <button id="brc-gen-map" type="button" class="btn btn-primary brc-util">Generate atlas map data</button>
             <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" id="brc-gen-hectads">
+              <input class="form-check-input" type="checkbox" id="brc-gen-hectads" checked>
               <label class="form-check-label" for="brc-gen-hectads">Hectads</label>
             </div>
             <div class="form-check form-switch">
@@ -56,7 +60,7 @@
           <div disable="disabled" class="border brc-ctrl-grp brc-file-enable">
             <button id="brc-gen-chart" type="button" class="btn btn-primary brc-util">Generate chart map data</button>
             <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" id="brc-gen-byweek">
+              <input class="form-check-input" type="checkbox" id="brc-gen-byweek" checked>
               <label class="form-check-label" for="brc-gen-byweek">Record count by week in year</label>
             </div>
             <div class="form-check form-switch">
