Updated BRC meeting links

--- a/brc-conf.html
+++ b/brc-conf.html
@@ -9,11 +9,15 @@
     <style>
         body {
             font-family: Arial;
+            margin: auto;
+            width: 60%;
+            padding: 10px;
         }
+        ul li { padding: 5px 0px; }
     </style>
   </head>
   <body>
-    <h1></h1>
+    <h1>Links for BRC Recording Schemes Meeting 2024</h1>
     <ul>
         <li>
             <a target="_blank" href="https://www.fscbiodiversity.uk/fullscreen/springtailatlas">
@@ -40,9 +44,6 @@
                 Burkmar brevi-atlas-test forked repo - 'GitHub pages' website
             </a>
         </li>
-
-        
-
     </ul>
   </body>
 </html>
