--- a/brc-conf.html
+++ b/brc-conf.html
@@ -25,7 +25,7 @@
             </a>
         </li>
         <li>
-            <a target="_blank" href="https://www.github.com">
+            <a target="_blank" href="https://github.com/about">
                 GitHub platform
             </a>
         </li>
