Updated BRC meeting links

--- a/brc-conf.html
+++ b/brc-conf.html
@@ -20,8 +20,13 @@
     <h1>Links for BRC Recording Schemes Meeting 2024</h1>
     <ul>
         <li>
-            <a target="_blank" href="https://www.fscbiodiversity.uk/fullscreen/springtailatlas">
-                FSC Tomorrow's Biodiversity atlases
+             <a target="_blank" href="https://www.fscbiodiversity.uk/fullscreen/springtailatlas">
+                 FSC Tomorrow's Biodiversity atlases
+             </a>
+         </li>
+        <li>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/GitHub">
+                GitHub - Wikipedia
             </a>
         </li>
         <li>
@@ -36,7 +41,7 @@
         </li>
         <li>
             <a target="_blank" href="https://burkmarr.github.io/brevi-atlas-test/">
-                Burkmar brevi-atlas-test forked repo - 'GitHub pages' website
+                'GitHub pages' website for Burkmar brevi-atlas-test forked repo
             </a>
         </li>
     </ul>
