--- a/core/admin.html
+++ b/core/admin.html
@@ -16,11 +16,8 @@
       <main>
         <h4>Atlas admin utilties</h4>
         <ul class="list-group admin-link">
-          <a class="list-group-item list-group-item-action" href="generate.html">Generate atlas <b>data</b> from a biological records</a>
-        </ul>
-        <!-- <ul class="list-group admin-link">
-          <a class="list-group-item list-group-item-action" href="generate.html">Generate atlas <b>chart data</b> from CSV biological records</a>
-        </ul> -->
+          <a class="list-group-item list-group-item-action" href="generate.html">Generate atlas <b>data</b> from a biological records CSV</a>
+        </ul>fir ar
         <h4 class="mt-4">Navigation links</h4>
         <ul class="list-group admin-link">
           <a class="list-group-item list-group-item-action" href="main.html">Back to main atlas page</a>
