--- a/core/generate.html
+++ b/core/generate.html
@@ -77,7 +77,7 @@
           </div>
 
           <div class="border p-2">
-            <button id="brc-gen-chart" type="button" class="disabled btn btn-primary mb-2">Generate chart map data</button>
+            <button id="brc-gen-chart" type="button" class="disabled btn btn-primary mb-2">Generate chart data</button>
             <div class="form-check form-switch">
               <input class="form-check-input brc-gen-chart-chk" disabled type="checkbox" id="brc-gen-weekly">
               <label class="form-check-label" for="brc-gen-weekly">Record count by week in year</label>
